--- a/auto-approve-pr/action.yml
+++ b/auto-approve-pr/action.yml
@@ -14,6 +14,7 @@ runs:
         fi
     - name: Check number of lines inserted & deleted
       run: |
+        git fetch --recurse-submodules=no
         echo "CHANGE_LINES=`git diff --numstat origin/$HEAD_REF..origin/$BASE_REF --format="" "$@" | awk '{ins += $1}{del += $2} END{print ""ins+del""}'`" >> $GITHUB_ENV
       shell: bash
       env:
